--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
                     User-Visible krb5-strength Changes
 
+krb5-strength 0.4 (2007-03-28)
+
+    The patches directory was omitted from the distribution.  Really
+    include it.
+
 krb5-strength 0.3 (2007-03-23)
 
     Initial public release.  Includes a patch for MIT Kerberos, a slightly
