--- a/README
+++ b/README
@@ -83,6 +83,12 @@ REQUIREMENTS
   locatable on the Internet with a modicum of searching, none are included
   in this toolkit.
 
+  To bootstrap from a Git checkout, or If you change the Automake files
+  and need to regenerate Makefile.in, you will need Automake 1.11 or
+  later.  For bootstrap or if you change configure.ac or any of the m4
+  files it includes and need to regenerate configure or config.h.in, you
+  will need Autoconf 2.64 or later.
+
 COMPILING AND INSTALLING
 
   First, patch MIT Kerberos with the patch provided in the patches
