Fixed the padding written by the packer utility
Fixed the data format written by the included packer program to add
enough nul bytes at the end of the data.  Previously, there was not
enough trailing nul bytes for the expected input format, leading to
uninitialized memory reads in the password lookup.

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,11 @@ krb5-strength 1.0 (unreleased)
     Add heimdal-strength, a program that checks password strength using
     the protocol for a Heimdal external check program.
 
+    Fixed the data format written by the included packer program to add
+    enough nul bytes at the end of the data.  Previously, there was not
+    enough trailing nul bytes for the expected input format, leading to
+    uninitialized memory reads in the password lookup.
+
 krb5-strength 0.5 (2007-07-18)
 
     The check of the password against the principal checked against the
