Add tests for POD documentation and spelling stopwords

--- a/external/heimdal-strength.pod
+++ b/external/heimdal-strength.pod
@@ -1,3 +1,6 @@
+=for stopwords
+heimdal-strength Heimdal CrackLib krb5.conf krb5-strength Allbery
+
 =head1 NAME
 
 heimdal-strength - Heimdal password quality check embedding CrackLib
