--- a/NEWS
+++ b/NEWS
@@ -11,7 +11,9 @@ krb5-strength 1.0 (unreleased)
 
     Add a new plugin API for MIT Kerberos modelled after the plugin API
     used for other MIT Kerberos plugins.  Thanks to Marcus Watts for
-    substantial research and contributions to the interface design.
+    substantial research and contributions to the interface design.  This
+    work is incomplete in this release, missing the corresponding patch to
+    MIT Kerberos.
 
     Fixed the data format written by the included packer program to add
     enough nul bytes at the end of the data.  Previously, there was not
