--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
                     User-Visible krb5-strength Changes
 
-krb5-strength 1.0 (unreleased)
+krb5-strength 1.0 (2010-02-16)
 
     Add heimdal-strength, a program that checks password strength using
     the protocol for a Heimdal external check program.
