--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+krb5-strength (1.0-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+    - Add an external password strength program for Heimdal.
+    - Add a plugin for the Heimdal password strength support.
+
+ -- Russ Allbery <rra@debian.org>  Tue, 16 Feb 2010 18:43:18 -0800
+
 krb5-strength (0.5-1) unstable; urgency=low
 
   * New upstream release.
