--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ krb5-strength (1.0-1) UNRELEASED; urgency=low
   * New upstream release.
     - Add an external password strength program for Heimdal.
     - Add a plugin for the Heimdal password strength support.
+  * Update debhelper compatibility mode to V7.
+    - Use debhelper rule minimization with overrides.
+    - Add ${misc:Depends} to dependencies.
 
  -- Russ Allbery <rra@debian.org>  Tue, 16 Feb 2010 18:43:18 -0800
 
