--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-krb5-strength (1.0-1) UNRELEASED; urgency=low
+krb5-strength (1.0-1) unstable; urgency=low
 
   * New upstream release.
     - Add an external password strength program for Heimdal.
@@ -13,7 +13,7 @@ krb5-strength (1.0-1) UNRELEASED; urgency=low
   * Add a watch file.
   * Update standards version to 3.8.4 (no changes required).
 
- -- Russ Allbery <rra@debian.org>  Tue, 16 Feb 2010 18:43:18 -0800
+ -- Russ Allbery <rra@debian.org>  Tue, 16 Feb 2010 22:47:35 -0800
 
 krb5-strength (0.5-1) unstable; urgency=low
 
