--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ krb5-strength 1.1 (unreleased)
 
     Change the minimum password length in the embedded CrackLib to 8.
 
+    Reject passwords formed from the username portion of the principal
+    with digits appended.
+
     Support linking with the system CrackLib instead of the embedded and
     stricter copy by passing --with-cracklib to configure.
 
