Update to rra-c-util 4.4 and C TAP Harness 1.12
Update to rra-c-util 4.4:

* Use PATH_KRB5_CONFIG to override krb5-config location.
* Fix probing for ibm_svc/krb5_svc.h on AIX.
* Support Heimdal libraries without libroken, like OpenBSD.
* Fix manual Kerberos library probing without transitive dependencies.
* Support systems that only have krb5/krb5.h.
* Pass --deps to krb5-config in the non-reduced-dependencies case.
* Silence __attribute__ warnings on more compilers.
* Include strings.h where available for additional prototypes.
* Update warning flags for make warnings.
* Flesh out MAINTCLEANFILES to remove autogen results.
* Add notices to all files copied from rra-c-util.

Update to C TAP Harness 1.12:

* Drop is_double from the C TAP library to avoid requiring -lm.
* Avoid using local in the shell libtap.sh library.
* Silence __attribute__ warnings on more compilers.
* runtests now frees all allocated resources on exit.
* Add bmalloc, bcalloc, brealloc, and bstrdup TAP library functions.
* Fix runtests to still honor SOURCE and -s without BUILD and -b.
* Add tests/HOWTO documenting how to add new tests.
* More correct handling of system-specific errors in output checking.
* Ensure correct output ordering in test results.
* Add -h and a better usage message to tests/runtests.
* Add diag and sysdiag functions to the basic TAP library.
* Clean up data types in the basic C TAP library.
* Add the GCC nonnull attribute to the TAP library bail functions.

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,30 @@ krb5-strength 1.1 (unreleased)
     with a different native integer size.  Thanks, Karl Lehnberger and
     Benj Carson.
 
+    Update to rra-c-util 4.4:
+
+    * Use PATH_KRB5_CONFIG to override krb5-config location.
+    * Fix probing for ibm_svc/krb5_svc.h on AIX.
+    * Support Heimdal libraries without libroken, like OpenBSD.
+    * Fix manual Kerberos library probing without transitive dependencies.
+    * Support systems that only have krb5/krb5.h.
+    * Pass --deps to krb5-config in the non-reduced-dependencies case.
+    * Silence __attribute__ warnings on more compilers.
+    * Update warning flags for make warnings.
+    * Flesh out MAINTCLEANFILES to remove autogen results.
+    * Add notices to all files copied from rra-c-util.
+
+    Update to C TAP Harness 1.12:
+
+    * Drop is_double from the C TAP library to avoid requiring -lm.
+    * Avoid using local in the shell libtap.sh library.
+    * Silence __attribute__ warnings on more compilers.
+    * runtests now frees all allocated resources on exit.
+    * Fix runtests to still honor SOURCE and -s without BUILD and -b.
+    * Add tests/HOWTO documenting how to add new tests.
+    * Ensure correct output ordering in test results.
+    * Add -h and a better usage message to tests/runtests.
+
 krb5-strength 1.0 (2010-02-16)
 
     Add heimdal-strength, a program that checks password strength using
