--- a/README
+++ b/README
@@ -3,10 +3,10 @@
 
               Maintained by Russ Allbery <rra@stanford.edu>
 
-  Copyright 2006, 2007, 2009, 2010 Board of Trustees, Leland Stanford
-  Jr. University.  Portions copyright 1993 Alec Muffett.  Developed by
-  Derrick Brashear and Ken Hornstein of Sine Nomine Associates, on behalf
-  of Stanford University.
+  Copyright 2006, 2007, 2009, 2010, 2012 The Board of Trustees of the
+  Leland Stanford Junior University.  Portions copyright 1993 Alec
+  Muffett.  Developed by Derrick Brashear and Ken Hornstein of Sine Nomine
+  Associates, on behalf of Stanford University.
 
   This software is distributed under a BSD-style license and under the
   Artistic License.  Please see the section LICENSE for more information.
