--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+krb5-strength (1.1-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+    - Increase minimum password length to 8.
+    - Reject passwords formed from the username with digits appended.
+    - Reject duplicated dictionary words.
+    - Fix variable sizes on 64-bit platforms.
+
+ -- Russ Allbery <rra@debian.org>  Fri, 11 May 2012 14:49:16 -0700
+
 krb5-strength (1.0-1) unstable; urgency=low
 
   * New upstream release.
