Add a Bugs header directing bug reports to me personally

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ krb5-strength (1.1-1) UNRELEASED; urgency=low
     - Reject passwords formed from the username with digits appended.
     - Reject duplicated dictionary words.
     - Fix variable sizes on 64-bit platforms.
+  * Add a Bugs header directing bug reports to me personally.
   * Update to debhelper compatibility level V8.
 
  -- Russ Allbery <rra@debian.org>  Fri, 11 May 2012 14:49:16 -0700
