--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-krb5-strength (1.1-1) UNRELEASED; urgency=low
+krb5-strength (1.1-1) unstable; urgency=low
 
   * New upstream release.
     - Increase minimum password length to 8.
@@ -11,7 +11,7 @@ krb5-strength (1.1-1) UNRELEASED; urgency=low
     patch header.
   * Update standards version to 3.9.3 (no changes required).
 
- -- Russ Allbery <rra@debian.org>  Fri, 11 May 2012 14:49:16 -0700
+ -- Russ Allbery <rra@debian.org>  Fri, 11 May 2012 15:03:11 -0700
 
 krb5-strength (1.0-1) unstable; urgency=low
 
