Fix the path to the Heimdal password strength header
Expect the Heimdal password strength checking plugin header in
kadm5/kadm5-pwcheck.h instead of outside of the kadm5 directory.  This
is the path used by current versions of Heimdal.

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,10 @@ krb5-strength 2.0 (unreleased)
     which tightens the check somewhat for shorter passwords and loosens it
     considerably for longer passwords.
 
+    Expect the Heimdal password strength checking plugin header in
+    kadm5/kadm5-pwcheck.h instead of outside of the kadm5 directory.  This
+    is the path used by current versions of Heimdal.
+
     Update to rra-c-util 4.9:
 
     * Probe for Kerberos headers using file checks instead of compiles.
